libraries/ckit/regression/invalid-programs/r21.c
struct X {
  int x1;
  int x2;
  int x3;
};

enum Y {
  x1, x2, x3
};

main() {
  struct X *y, *z;
  float x2;
  
  y = 0;
  y == 0;
  y >= 0+1;
}
